--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 <html>
+
     <head>
         <meta charset="UTF-8">
         <script src="CalcWASM.js"></script>
@@ -8,17 +9,54 @@
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
         <meta lang="en">
     </head>
-    <body onkeyup="keyUp(event);" onload="onload()">
-    <div id="box">
-        <span id="inputContainer">
-            <input type="text" id="input" onenter="inputOnEnter()" autocomplete="off">
-        </span>
-        <span id="output">
 
-        </span>
-    </div>
-    <canvas id="graph">
+    <body onkeyup="keyUp(event);" onkeydown="keyDown(event);" onresize="boxResize()">
+        <div id="panel">
+            <div id="mainHelp" class="panelPage" style="display:block">
+                <button class="backButton" onclick="openPanel(false)">Close</button><br>
+                Help Menu<br>
+                <div class="buttonList">
+                    <button class="panelButton"
+                            onclick="helpSearch(document.getElementById('helpSearchBox').value);"><strong>Search</strong></button>
+                    <button onclick="openHelp('number')" class="panelButton">Numbers</button>
+                    <button onclick="openHelp('operator')" class="panelButton">Operators</button>
+                    <button onclick="openHelp('vectors')" class="panelButton">Vectors</button>
+                    <button onclick="openHelp('units')" class="panelButton">Units</button>
+                    <button onclick="openHelp('base conversion')" class="panelButton">Base Conversion</button>
+                    <button onclick="openHelp('anonymous functions')" class="panelButton">Anonymous Functions</button>
+                    <button onclick="openHelp('functions')" class="panelButton">List of Functions</button>
+                    <button onclick="openHelp('units')" class="panelButton">List of Units</button>
+                    <button onclick="openHelp('command')" class="panelButton">List of Commands</button>
+                    <button onclick="openHelp('info')" class="panelButton">Info</button>
+                </div>
 
-    </canvas>
+            </div>
+            <div id="helpSubPage" class="panelPage">
+                <button id="helpSubPageBack" onclick="openPanelPage(0)">Back</button>
+                <div id="helpPageContent"></div>
+            </div>
+            <div id="helpSearch" class="panelPage">
+                Search Menu<br>
+                <input type="text" class="panelButton" id="helpSearchBox" onkeyup="helpSearch(this.value,event)">
+                <div id="helpSearchResults" class="buttonList"></div>
+            </div>
+        </div>
+        <div id="box">
+            <div id="boxwrapper">
+                <span id="inputContainer">
+                    <input type="text" id="input" onenter="inputOnEnter()" autocomplete="off">
+                </span>
+                <span id="output">
+
+                </span>
+            </div>
+        </div>
+        <div id="menubuttons">
+            <button class="menuOpenButton" onclick="openPanelPage(0)">?</button>
+        </div>
+        <canvas id="graph">
+
+        </canvas>
     </body>
+
 </html>
