--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         <script src="CalcWASM.js"></script>
         <script src="Calc.js"></script>
         <title>Calc for JS</title>
-        <link rel="stylesheet" href="Calc.css" type="text/css">
+        <link rel="stylesheet" href="style/Calc.css" type="text/css">
+        <link rel="stylesheet" href="" type="text/css" id="colorScheme">
         <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
         <meta lang="en">
     </head>
@@ -36,9 +37,15 @@
                 <div id="helpPageContent"></div>
             </div>
             <div id="helpSearch" class="panelPage">
-                Search Menu<br>
+                <button onclick="openPanelPage(0)">Back</button> Search Menu<br>
                 <input type="text" class="panelButton" id="helpSearchBox" onkeyup="helpSearch(this.value,event)">
                 <div id="helpSearchResults" class="buttonList"></div>
+            </div>
+            <div id="settingsPage" class="panelPage">
+                <button id="settingsBack" onclick="openPanelPage(0)">Back</button>
+                Settings:<br>
+                <input oninput="setSetting('useDarkMode',this.checked);" id="setting-darkMode" type="checkbox" name="Dark Mode">
+                <label for="setting-darkMode">Dark Mode</label>
             </div>
         </div>
         <div id="box">
@@ -52,7 +59,7 @@
             </div>
         </div>
         <div id="menubuttons">
-            <button class="menuOpenButton" onclick="openPanelPage(0)">?</button>
+            <button class="menuOpenButton" onclick="openPanelPage(3)"><svg width="0.8em" height="0.8em" viewBox="340 140 280 279"><path xmlns="http://www.w3.org/2000/svg" class="svgpath" fill="#000" d="M620,305.666v-51.333l-31.5-5.25c-2.333-8.75-5.833-16.917-9.917-23.917L597.25,199.5l-36.167-36.75l-26.25,18.083  c-7.583-4.083-15.75-7.583-23.916-9.917L505.667,140h-51.334l-5.25,31.5c-8.75,2.333-16.333,5.833-23.916,9.916L399.5,163.333  L362.75,199.5l18.667,25.666c-4.083,7.584-7.583,15.75-9.917,24.5l-31.5,4.667v51.333l31.5,5.25  c2.333,8.75,5.833,16.334,9.917,23.917l-18.667,26.25l36.167,36.167l26.25-18.667c7.583,4.083,15.75,7.583,24.5,9.917l5.25,30.916  h51.333l5.25-31.5c8.167-2.333,16.333-5.833,23.917-9.916l26.25,18.666l36.166-36.166l-18.666-26.25  c4.083-7.584,7.583-15.167,9.916-23.917L620,305.666z M480,333.666c-29.75,0-53.667-23.916-53.667-53.666s24.5-53.667,53.667-53.667  S533.667,250.25,533.667,280S509.75,333.666,480,333.666z"/><!--Thanks to WikiMedia for providing this logo.--></svg></button><button class="menuOpenButton" onclick="openPanelPage(0)">?</button>
         </div>
         <canvas id="graph">
 
