New help page system

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@ user-scalable=no">
                     <button onclick="openHelp('units')" class="panelButton">Units</button>
                     <button onclick="openHelp('base conversion')" class="panelButton">Base Conversion</button>
                     <button onclick="openHelp('anonymous functions')" class="panelButton">Anonymous Functions</button>
-                    <button onclick="openHelp('functions')" class="panelButton">List of Functions</button>
-                    <button onclick="openHelp('unit list')" class="panelButton">List of Units</button>
-                    <button onclick="openHelp('command')" class="panelButton">List of Commands</button>
+                    <button onclick="openHelp('list of functions')" class="panelButton">List of Functions</button>
+                    <button onclick="openHelp('list of units')" class="panelButton">List of Units</button>
+                    <button onclick="openHelp('list of command')" class="panelButton">List of Commands</button>
                     <button onclick="openHelp('info')" class="panelButton">Info</button>
                 </div>
             </div>
