--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ user-scalable=no">
                 <span id="inputContainer">
                     <div contenteditable="true" id="input" oninput="inputSyntax();" onenter="inputOnEnter()" onkeydown="inputKeyDown(event);" spellcheck="false" autocomplete="off"></div>
                 </span>
+                <div id="currentString"></div>
                 <span id="output">
                     <div class='errorItem'>
                         Type an expression into the box or see the <a href="javascript:openHelp('getting started')">getting started guide</a>.
